--- a/lang/en.json
+++ b/lang/en.json
@@ -862,7 +862,7 @@
         "errorMessage": "There was a problem retrieving your results. Please try again in a few seconds.",
         "quick_search": {
             "input_label": "Search",
-            "input_placeholder": "Search any product or categories"
+            "input_placeholder": "Search"
         },
         "results": {
             "form_label": "Search Keyword:",
