--- a/lang/en.json
+++ b/lang/en.json
@@ -551,13 +551,13 @@
         "range": "You need to enter numbers only between: {limitTo} and {limitFrom}",
         "contact_us": {
             "full_name": "Full Name",
-            "email": "Email Address",
+            "email": "Email",
             "company": "Company Name",
             "phone": "Phone Number",
             "order": "Order Number",
             "rma": "RMA Number",
-            "question": "Comments/Questions",
-            "submit": "Submit Form",
+            "question": "Message",
+            "submit": "Send",
             "successful": "We've received your feedback and will respond shortly if required. <a href=\"{shopPath}\">Continue</a>.",
             "manual_captcha_instruction": "Please answer the question below for additional verification."
         },
