Done Category No Test

--- a/lang/en.json
+++ b/lang/en.json
@@ -795,8 +795,8 @@
         "choose_an_option": "Please choose an option",
         "select_one": "Please select one",
         "description": "Description",
-        "price_with_tax": "(Inc. {tax_label})",
-        "price_without_tax": "(Ex. {tax_label})",
+        "price_with_tax": "inc. {tax_label}",
+        "price_without_tax": "exc. {tax_label} |",
         "including_tax": "Including Tax",
         "excluding_tax": "Excluding Tax",
         "weight": "Weight:",
