Done Sidebar layout noCcalculate Free Shipping

--- a/lang/en.json
+++ b/lang/en.json
@@ -65,7 +65,7 @@
             "add_more": "Add more"
         },
         "preview": {
-            "title": "Review your cart",
+            "title": "Cart",
             "checkout_now": "Check out now",
             "checkout_multiple": "or check out with multiple addresses",
             "view_cart": "View Cart"
