--- a/lang/en.json
+++ b/lang/en.json
@@ -731,6 +731,7 @@
         "max_purchase_quantity": "Maximum Purchase:",
         "min_purchase_quantity": "Minimum Purchase:",
         "related_products": "Related Products",
+        "recently_view_products": "Recently viewed",
         "top": "Most Popular Products",
         "similar_by_views": "Customers Also Viewed",
         "featured": "Featured Products",
