Done Sidebar Cart Not Estimate Shipping Cost

--- a/lang/en.json
+++ b/lang/en.json
@@ -66,7 +66,7 @@
         },
         "preview": {
             "title": "Cart",
-            "checkout_now": "Check out now",
+            "checkout_now": "Check out",
             "checkout_multiple": "or check out with multiple addresses",
             "view_cart": "View Cart"
         },
