Start Change Dropdown Source From Select To Ul-li

--- a/lang/en.json
+++ b/lang/en.json
@@ -933,7 +933,9 @@
             "show-less": "Show Less",
             "show-filters": "Show Filters",
             "hide-filters": "Hide Filters",
-            "browse-by": "Browse by"
+            "browse-by": "Browse by",
+            "reset-filters": "Reset",
+            "more-options": "More options"
         },
         "error": {
             "empty_field": "Search field cannot be empty."
